# pdb-rs

./: .gitignore  Cargo.toml  README.md  SUPPORT.md  pdb-rs.sln
.github/workflows/: ci.yml
codeview/: Cargo.toml
codeview/src/: arch.rs  encoder.rs  lib.rs  parser.rs  syms.rs  types.rs
codeview/src/arch/: amd64.rs  arm64.rs  x86.rs
codeview/src/arch/amd64/: regs.rs
codeview/src/arch/arm64/: regs.rs
codeview/src/arch/x86/: regs.rs
codeview/src/parser/: tests.rs
codeview/src/syms/: iter.rs  kind.rs  offset_segment.rs
codeview/src/types/: fields.rs  iter.rs  kind.rs  number.rs  primitive.rs  records.rs  visitor.rs
codeview/src/utils/: iter.rs
coff/: Cargo.toml
coff/src/: dll_characteristics.rs  image.rs  lib.rs  machine.rs  reloc.rs  section.rs
cs/Pdb/: Bytes.cs  Dbi.cs  IMsfReader.cs  MsfDefs.cs  MsfPageMapper.cs  MsfReader.cs  MsfStreamReader.cs  PdbReader.cs
cs/PdbTest/: PdbTest.csproj  Test1.cs
docs/: data_types.md  determinism.md  index.md  intro.md  maintainers.md  references.md  terminology.md
docs/codeview/: calling_convention.md  codeview.md  codeview_consts.md  line_data.md  number.md  primitive_types.md
docs/codeview/items/: items.md  lf_buildinfo.md  lf_func_id.md  lf_mfunc_id.md  lf_string_id.md  lf_substr_list.md  lf_udt_mod_src_line.md  lf_udt_src_line.md
docs/codeview/symbols/: s_annotation.md  s_armswitchtable.md  s_block.md  s_buildinfo.md  s_coffgroup.md  s_compile.md  s_constant.md  s_data.md  s_end.md  s_frameproc.md  s_inlinesite.md  s_label.md  s_local.md  s_procs.md  s_pub.md  s_refsyms.md  s_section.md  s_thread.md  s_thunk.md  s_trampoline.md  s_udt.md  symbols.md
docs/codeview/types/: lf_arglist.md  lf_array.md  lf_bitfield.md  lf_buildinfo.md  lf_class.md  lf_endprecomp.md  lf_enum.md  lf_fieldlist.md  lf_func_id.md  lf_methodlist.md  lf_mfunc_id.md  lf_mfunction.md  lf_modifier.md  lf_pointer.md  lf_precomp.md  lf_procedure.md  lf_refsym.md  lf_skip.md  lf_string_id.md  lf_substr_list.md  lf_udt_mod_src_line.md  lf_udt_src_line.md  lf_union.md  lf_vftpath.md  lf_vtshape.md  types.md
docs/pdb/: codeview_consts.md  codeview_number.md  data_types.md  dbi.md  dbi_fixups.md  dbi_modules.md  dbi_opt_debug.md  dbi_sections.md  dbi_sources.md  dbi_stream.md  globals.md  hashing.md  index.md  intro.md  ipi.md  ipi_stream.md  line_data.md  mini_pdb.md  module_stream.md  msf.md  msfz.md  names_stream.md  pdb.md  pdb_stream.md  pdbi_stream.md  primitive_types.md  references.md  relationships.md  symbols.md  tpi_stream.md  type_records.md
docs/pdb/syms/: buildinfo.md  data.md  namespace.md  objname.md  pub.md  thunk.md  trampoline.md
dump_utils/: Cargo.toml
dump_utils/src/: lib.rs
msf/: Cargo.toml  README.md
msf/src/: check.rs  commit.rs  error.rs  lib.rs  macros.rs  open.rs  pages.rs  read.rs  stream_reader.rs  stream_writer.rs  tests.rs  write.rs
msfz/: Cargo.toml
msfz/src/: compress_utils.rs  docs.md  lib.rs  msfz.md  reader.rs  stream_data.rs  tests.rs  writer.rs
mspdb/: Cargo.toml
mspdb/src/: container.rs  dbi.rs  diag.rs  embedded_sources.rs  encoder.rs  globals.rs  guid.rs  hash.rs  ipi.rs  lib.rs  lines.rs  modi.rs  names.rs  parser.rs  pdbi.rs  sort_utils.rs  srcsrv.rs  stream_index.rs  syms.rs  taster.rs  tmcache.rs  tpi.rs  types.rs  utils.rs
mspdb/src/dbi/: modules.rs  optional_dbg.rs  section_contrib.rs  section_map.rs  sources.rs
mspdb/src/globals/: gsi.rs  name_table.rs  psi.rs  tests.rs
mspdb/src/globals/name_table/: tests.rs
mspdb/src/lines/: check.rs  checksum.rs  subsection.rs
mspdb/src/modi/: check.rs
mspdb/src/names/: tests.rs
mspdb/src/parser/: tests.rs
mspdb/src/pdbi/: tests.rs
mspdb/src/syms/: check.rs  iter.rs  kind.rs  offset_segment.rs  remap.rs  sort.rs
mspdb/src/tpi/: check.rs  dedup.rs  find_type_refs.rs  hash.rs
mspdb/src/types/: fields.rs  iter.rs  kind.rs  number.rs  primitive.rs  records.rs  visitor.rs
mspdb/src/utils/: align.rs  io.rs  iter.rs  path.rs  swizzle.rs  vec.rs
mspdb/tests/: cpp_check.rs
mspdb/tests/cpp_check/: types.cpp
pdb/: Cargo.toml  README.md
pdb-mcp/: Cargo.toml  README.md
pdb-mcp/src/: format.rs  main.rs  server.rs  undecorate.rs
pdb-mcp/src/tools/: addr.rs  info.rs  mod.rs  modules.rs  open.rs  proc.rs  sections.rs  stats.rs  symbols.rs  types.rs
pdb/src/: coff_groups.rs  container.rs  dbi.rs  embedded_sources.rs  encoder.rs  globals.rs  guid.rs  hash.rs  lib.rs  lines.rs  modi.rs  names.rs  pdbi.rs  stream_index.rs  syms.rs  taster.rs  tpi.rs  types.rs  utils.rs  writer.rs
pdb/src/dbi/: fixups.rs  modules.rs  optional_dbg.rs  section_contrib.rs  section_map.rs  sources.rs
pdb/src/globals/: gsi.rs  gss.rs  name_table.rs  psi.rs  tests.rs
pdb/src/globals/name_table/: tests.rs
pdb/src/lines/: checksum.rs  subsection.rs
pdb/src/names/: tests.rs
pdb/src/pdbi/: tests.rs
pdb/src/syms/: builder.rs  iter.rs  kind.rs  offset_segment.rs
pdb/src/tpi/: hash.rs
pdb/src/types/: records.rs
pdb/src/utils/: align.rs  io.rs  iter.rs  path.rs  swizzle.rs  vec.rs
pdb/tests/: cpp_check.rs
pdb/tests/cpp_check/: types.cpp
pdbtool/: Cargo.toml  README.md
pdbtool/src/: addsrc.rs  check.rs  compare.rs  container.rs  copy.rs  counts.rs  dump.rs  dump_utils.rs  find.rs  glob_pdbs.rs  hash.rs  hexdump.rs  main.rs  oscheck.rs  pdz.rs  save.rs  tpi_diff.rs  util.rs
pdbtool/src/dump/: lines.rs  names.rs  sections.rs  sources.rs  streams.rs  sym.rs  tmcache.rs  types.rs
pdbtool/src/pdz/: encode.rs  util.rs
pdbtool/tests/: encode.rs
