[workspace]
resolver = "2"

members = [
#    "dia",
    "dump_utils",
#    "fs_utils",
    "msf",
    "msfz",
    "mspdb",
#    "parallel_utils",
#    "pdbtool",
#    "pdbview",
#    "replace",
#    "self_profile",
#    "trie",
#    "win_utils",
]

[workspace.dependencies]
anyhow = "1.0.71"
base64 = "0.21.2"
bitfield = "0.14.0"
bitflags = "2.3.2"
bitvec = "1"
bstr = "1.8.0"
bumpalo = "3.13.0"
cc = "1.0.79"
com = "0.6.0"
env_logger = "0.10.0"
flate2 = "1.0.27"
friendly = "0.1.0"
glob = "0.3.1"
log = "0.4.17"
pow2 = "0.1.1"
proc-macro2 = "1"
quote = "1"
rand = "0.8.5"
rayon = "1.7.0"
regex = "1.8.4"
serde = "1.0.163"
serde_derive = "1.0.163"
serde_json = "1.0.96"
sha2 = "0.10.7"
similar = "2.2.1"
sqlite = "0.31.0"
static_assertions = "1.0"
static_init = "1.0.3"
structopt = "0.3.26"
syn = "2.0"
sync_file = "0.2.6"
tracing = "0.1.41"
uuid = "1.4.0"
widestring = "1.0.2"
windows = "0.51.1"
windows-core = "0.51.1"
zerocopy = "0.7.3"
zerocopy-derive = "0.7.3"
zstd = "0.12.3"

mspdb = { path = "mspdb" }

[profile.release]
debug = 2
