[workspace]
resolver = "2"

members = [
#    "dia",
    "dump_utils",
#    "fs_utils",
    "msf",
    "msfz",
    "mspdb",
#    "parallel_utils",
#    "pdbtool",
#    "pdbview",
#    "replace",
#    "self_profile",
#    "trie",
#    "win_utils",
]

[workspace.dependencies]
anyhow = "1.0.71"
bitfield = "0.14.0"
bitflags = "2.3.2"
bitvec = "1"
bstr = "1.8.0"
bumpalo = "3.13.0"
cc = "1.0.79"
flate2 = "1.0.27"
pow2 = "0.1.1"
static_assertions = "1.0"
static_init = "1.0.3"
structopt = "0.3.26"
sync_file = "0.2.6"
tracing = "0.1.41"
uuid = "1.4.0"
tracing-subscriber = "0.3.19"
zerocopy = "0.7.3"
zerocopy-derive = "0.7.3"
zstd = "0.13.2"

mspdb = { path = "mspdb" }

[profile.release]
debug = 2
