[workspace]
resolver = "2"

members = [
    "msf",
    "msfz",
    "pdb",
    "pdbtool",
]

[workspace.dependencies]
anyhow = "1.0.71"
bitfield = "0.14.0"
bitflags = "2.3.2"
bitvec = "1"
bstr = "1.8.0"
bumpalo = "3.13.0"
cc = "1.0.79"
clap = "4.5.27"
dbg-ranges = "0.1.0"
flate2 = "1.0.27"
pow2 = "0.1.1"
pretty-hex = "0.4.1"
static_assertions = "1.0"
static_init = "1.0.3"
sync_file = "0.2.6"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tracing-tracy = "0.11.4"
uuid = "1.4.0"
zerocopy = "0.8.14"
zerocopy-derive = "0.8.14"
zstd = "0.13.2"

mspdb = { path = "mspdb" }

[profile.release]
debug = 2

# This compiles external packages with optimizations. Compression libraries
# especially sensitive to optimization. This makes it a lot easier to do
# development and run tests with local code in debug mode but external dependencies
# fully optimized.
[profile.dev.package."*"]
opt-level = 2

[profile.coverage]
inherits = "dev"
