[package]
name = "ms-codeview"
version = "0.1.5"
edition = "2021"
description = "Definitions for use with CodeView debugging symbols"
authors = ["Arlie Davis <ardavis@microsoft.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/microsoft/pdb-rs/"
categories = ["parsing", "development-tools", "development-tools::debugging"]

[dependencies]
anyhow.workspace = true
bitfield.workspace = true
bitflags.workspace = true
bstr.workspace = true
tracing.workspace = true
pretty-hex.workspace = true
uuid.workspace = true
zerocopy = { workspace = true, features = ["alloc", "derive"] }
zerocopy-derive.workspace = true

[dependencies.ms-coff]
version = "0.1.0"
path = "../coff"
