[package]
name = "msf"
version = "0.1.0"
edition = "2021"
description = "Reads Multi-Stream Files, which is part of the Microsoft PDB file format"
authors = ["Arlie Davis <ardavis@microsoft.com>"]
license = "MIT OR Apache-2.0"

[lib]
doctest = false

[dependencies]
anyhow.workspace = true
bitvec.workspace = true
pow2.workspace = true
static_assertions.workspace = true
sync_file.workspace = true
tracing.workspace = true
uuid.workspace = true
zerocopy = { workspace = true, features = ["alloc", "derive"] }
zerocopy-derive.workspace = true

[dev-dependencies]
static_init.workspace = true
tracing-subscriber = { workspace = true, features = ["fmt"] }
dbg-ranges = "0.1.0"
pretty-hex = "0.4.1"
tracing-tracy = { workspace = true, features = ["flush-on-exit"] }
