[package]
name = "ms-pdb-msf"
version = "0.1.0"
edition = "2021"
description = "Reads Multi-Stream Files, which are used in the Microsoft Program Database (PDB) file format"
authors = ["Arlie Davis <ardavis@microsoft.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/microsoft/pdb-rs/"
categories = ["parsing", "development-tools", "development-tools::debugging"]

[lib]
doctest = false

[dependencies]
anyhow.workspace = true
bitvec.workspace = true
pow2.workspace = true
static_assertions.workspace = true
sync_file.workspace = true
tracing.workspace = true
uuid.workspace = true
zerocopy = { workspace = true, features = ["alloc", "derive"] }
zerocopy-derive.workspace = true

[dev-dependencies]
dbg-ranges = "0.1.0"
pretty-hex = "0.4.1"
static_init.workspace = true
tracing-subscriber = { workspace = true, features = ["fmt"] }
