[package]
name = "msfz"
version = "0.1.0"
edition = "2021"
description = "Reads Compressed Multi-Stream Files, which is part of the Microsoft PDB file format"
authors = ["Arlie Davis <ardavis@microsoft.com>"]
license = "MIT OR Apache-2.0"

[lib]
doctest = false

[dependencies]
anyhow.workspace = true
flate2.workspace = true
static_assertions.workspace = true
sync_file.workspace = true
zerocopy = { workspace = true, features = ["alloc", "derive"] }
zerocopy-derive.workspace = true
zstd.workspace = true
pow2.workspace = true

[dev-dependencies]
dump_utils = { path = "../dump_utils" }
bstr.workspace = true
