[package]
name = "mspdb"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
bitfield.workspace = true
bitflags.workspace = true
bitvec.workspace = true
dump_utils = { path = "../dump_utils" }
msf = { path = "../msf" }
msfz = { path = "../msfz" }
pow2.workspace = true
bstr.workspace = true
static_assertions.workspace = true
sync_file.workspace = true
tracing.workspace = true
uuid.workspace = true
zerocopy = { workspace = true, features = ["alloc", "derive"] }
zerocopy-derive.workspace = true

[dev-dependencies]
tracing-subscriber.workspace = true
static_init.workspace = true
