[package]
name = "mspdb"
version = "0.1.0"
edition = "2021"
description = "Reads Microsoft Program Database (PDB) files"
authors = ["Arlie Davis <ardavis@microsoft.com>"]
license = "MIT OR Apache-2.0"

[lib]
doctest = false

[dependencies]
anyhow.workspace = true
bitfield.workspace = true
bitflags.workspace = true
bitvec.workspace = true
dump_utils = { path = "../dump_utils" }
msf = { path = "../msf" }
msfz = { path = "../msfz" }
pow2.workspace = true
bstr.workspace = true
pretty-hex.workspace = true
static_assertions.workspace = true
sync_file.workspace = true
tracing.workspace = true
uuid.workspace = true
zerocopy = { workspace = true, features = ["alloc", "derive"] }
zerocopy-derive.workspace = true

[dev-dependencies]
static_init.workspace = true
tracing-subscriber.workspace = true
