[package]
name = "ms-pdb"
version = "0.1.4"
edition = "2021"
description = "Reads Microsoft Program Database (PDB) files"
authors = ["Arlie Davis <ardavis@microsoft.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/microsoft/pdb-rs/"
categories = ["parsing", "development-tools", "development-tools::debugging"]

[lib]
doctest = false

[dependencies]
anyhow.workspace = true
bitfield.workspace = true
bitflags.workspace = true
bitvec.workspace = true
pow2.workspace = true
bstr.workspace = true
pretty-hex.workspace = true
static_assertions.workspace = true
sync_file.workspace = true
tracing.workspace = true
uuid.workspace = true
zerocopy = { workspace = true, features = ["alloc", "derive"] }
zerocopy-derive.workspace = true

[dependencies.ms-pdb-msf]
version = "0.1.3"
path = "../msf"

[dependencies.ms-pdb-msfz]
version = "0.1.3"
path = "../msfz"

[dev-dependencies]
static_init.workspace = true
tracing-subscriber.workspace = true
