[package]
name = "pdbtool"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
bitvec.workspace = true
bstr.workspace = true
bumpalo.workspace = true
dump_utils = { path = "../dump_utils" }
friendly = "0.2"
glob = "0.3.2"
mspdb = { path = "../mspdb" }
regex = "1.0"
static_init.workspace = true
structopt.workspace = true
tracing-subscriber.workspace = true
tracing-tracy = { workspace = true, features = ["enable", "flush-on-exit"] }
tracing.workspace = true
zerocopy-derive.workspace = true
zerocopy.workspace = true
zstd.workspace = true
