[package]
name = "pdbtool"
version = "0.1.4"
edition = "2021"
description = "A tool for reading Program Database (PDB) files and displaying information about them."
authors = ["Arlie Davis <ardavis@microsoft.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/microsoft/pdb-rs/"
categories = ["parsing", "development-tools", "development-tools::debugging"]

[features]
tracy = ["dep:tracing-tracy"]

[dependencies]
anyhow.workspace = true
bitvec.workspace = true
bstr.workspace = true
bumpalo.workspace = true
dbg-ranges = "0.1.1"
friendly = "0.2"
glob = "0.3.2"
regex = "1.0"
static_init.workspace = true
clap = { workspace = true, features = ["derive"] }
tracing-subscriber = { workspace = true }
tracing-tracy = { workspace = true, optional = true, features = ["enable", "flush-on-exit"] }
tracing = { workspace = true, features = ["release_max_level_debug"] }
zerocopy-derive.workspace = true
zerocopy.workspace = true
zstd.workspace = true

[dependencies.ms-pdb]
version = "0.1.4"
path = "../pdb"

